Bit manipulation now works with negative numbers

Changed KCalcBitset operate on signed integers, so that manipulating
bits of negative numbers does not cause a sudden change to a huge
positive number.

BUG: 465565